Fixed level bar displacing on small screen

--- a/src/css/cardmaker.css
+++ b/src/css/cardmaker.css
@@ -38,10 +38,11 @@
   width: 400px;
   height: 583px;
   position: relative;
+  padding: 0;
 }
 
 #template {
-  z-index: 1;
+  z-index: 2;
   width: inherit;
   height: inherit;
 }
@@ -50,7 +51,7 @@
   position: absolute;
   z-index: 0;
   top: 8px;
-  left: 20px;
+  left: 8px;
   width: 384px;
   height: 420px;
 }
@@ -59,7 +60,7 @@
   position: absolute;
   z-index: 2;
   top: 452px;
-  left: 338px;
+  left: 325px;
   width: 42px;
   height: 42px;
 }
@@ -68,21 +69,21 @@
   position: absolute;
   z-index: 2;
   top: 504px;
-  left: 46px;
+  left: 34px;
 }
 
 #DEFText {
   position: absolute;
   z-index: 2;
   top: 504px;
-  left: 230px;
+  left: 218px;
 }
 
 #lvlbar {
   position: absolute;
   z-index: 2;
   top: 456px;
-  left: 11px;
+  left: 0;
   width: 100%;
 }
 
@@ -92,9 +93,10 @@
   }
   #template {
     width: 375px;
-    height: 547px
+    height: 547px;
   }
   #lvlbar {
+    width: 375px;
     top: 430px;
     left: 0;
   }
